@@ -4,8 +4,8 @@ S3method(update,fSRM)
 export(buildSRMSyntaxLatent)
 export(equalMeans)
 export(fSRM)
+export(getImport)
 export(import)
-export(import2)
 export(mod)
 import(lavaan)
 import(plyr)
